@@ -24,6 +24,7 @@
 
 package org.overrun.glib.demo.opengl;
 
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.demo.util.IOUtil;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GL11;
@@ -34,8 +35,8 @@ import org.overrun.glib.glfw.GLFWErrorCallback;
 import org.overrun.glib.stb.STBImage;
 
 import java.io.IOException;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static org.overrun.glib.gl.GLConst.*;
@@ -47,11 +48,11 @@ import static org.overrun.glib.gl.GLConst.*;
  * @since 0.1.0
  */
 public final class GL15Test {
-    private MemoryAddress window;
+    private MemorySegment window;
     private int vbo, tex;
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load(arena);
         }
@@ -67,7 +68,7 @@ public final class GL15Test {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -75,8 +76,8 @@ public final class GL15Test {
         GLFW.defaultWindowHints();
         GLFW.windowHint(GLFW.VISIBLE, false);
         GLFW.windowHint(GLFW.RESIZABLE, true);
-        window = GLFW.createWindow(arena, 640, 480, "OpenGL 1.5", MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 640, 480, "OpenGL 1.5", MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL_ADDR)
             throw new RuntimeException("Failed to create the GLFW window");
         GLFW.setKeyCallback(window, (handle, key, scancode, action, mods) -> {
             if (key == GLFW.KEY_ESCAPE && action == GLFW.RELEASE) {
@@ -85,7 +86,7 @@ public final class GL15Test {
         });
         GLFW.setFramebufferSizeCallback(window, (handle, width, height) ->
             GL.viewport(0, 0, width, height));
-        var vidMode = GLFW.getVideoMode(arena, GLFW.getPrimaryMonitor());
+        var vidMode = GLFW.getVideoMode(arena.scope(), GLFW.getPrimaryMonitor());
         if (vidMode != null) {
             var size = GLFW.getWindowSize(window);
             GLFW.setWindowPos(
@@ -101,7 +102,7 @@ public final class GL15Test {
         GLFW.showWindow(window);
     }
 
-    private void load(MemorySession arena) {
+    private void load(Arena arena) {
         if (GLLoader.loadConfined(GLFW::getProcAddress) == null)
             throw new IllegalStateException("Failed to load OpenGL");
 
@@ -127,7 +128,7 @@ public final class GL15Test {
             var py = arena.allocate(JAVA_INT);
             var pc = arena.allocate(JAVA_INT);
             var data = STBImage.loadFromMemory(
-                IOUtil.ioResourceToSegment(arena, "image.png", 256),
+                IOUtil.ioResourceToSegment(arena.scope(), "image.png", 256),
                 px, py, pc, STBImage.RGB
             );
             GL.texImage2D(GL_TEXTURE_2D,
@@ -158,9 +159,9 @@ public final class GL15Test {
             GL11.enableClientState(GL_TEXTURE_COORD_ARRAY);
             // 8 double words = 32 bytes
             final int stride = 8 << 2;
-            GL11.vertexPointer(3, GL_FLOAT, stride, MemoryAddress.NULL);
-            GL11.colorPointer(3, GL_FLOAT, stride, MemoryAddress.ofLong(3 << 2));
-            GL11.texCoordPointer(2, GL_FLOAT, stride, MemoryAddress.ofLong(6 << 2));
+            GL11.vertexPointer(3, GL_FLOAT, stride, MemorySegment.NULL);
+            GL11.colorPointer(3, GL_FLOAT, stride, MemorySegment.ofAddress(3 << 2));
+            GL11.texCoordPointer(2, GL_FLOAT, stride, MemorySegment.ofAddress(6 << 2));
             GL.drawArrays(GL_TRIANGLES, 0, 3);
             GL11.disableClientState(GL_VERTEX_ARRAY);
             GL11.disableClientState(GL_COLOR_ARRAY);
